k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  namespace: react-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app1.ai4devops.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-frontend
            port:
              number: 80
  - host: api.app1.ai4devops.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-backend
            port:
              number: 8001
